# VRuskaEngine

./: .gitlab-ci.yml  CMakeLists.txt  README.md  vcpkg.json
.gitlab-ci/: README.md  config.yml
.gitlab-ci/windows/: README.md
.reuse/: dep5
cmake/: FindEigen3.cmake
doc/: CHANGELOG.md  conventions.md  design-spaces.md  frame-pacing.md  how-to-release.md  howto-remote-driver.md  implementing-extension.md  ipc-design.md  mainpage.md  metrics.md  packaging-notes.md  swapchains-ipc.md  tracing-perfetto.md  tracing-tracy.md  tracing.md  understanding-targets.md  vulkan-extensions.md  winbuild.md  writing-driver.md
doc/changes/: .proclamation.json
doc/changes/auxiliary/: mr.1786.md  mr.2130.md  mr.2153.md  mr.2188.md  mr.2223.md  mr.2246.md  mr.2249.md  mr.2252.md  mr.2255.md  mr.2269.md  mr.2280.md  mr.2281.md  mr.2284.md  mr.2292.md  mr.2293.md  mr.2302.md  mr.2338.md  mr.2349.md  mr.2351.md  mr.2352.md  mr.2356.md  mr.2373.md  mr.2400.md  mr.2405.md  mr.2407.md  mr.2457.md
doc/changes/compositor/: mr.1786.md  mr.2250.md  mr.2273.md  mr.2295.md  mr.2323.md  mr.2326.md  mr.2337.md  mr.2352.md  mr.2368.md  mr.2375.md  mr.2377.md  mr.2452.md
doc/changes/drivers/: mr.2140.md  mr.2188.md  mr.2207.md  mr.2260.md  mr.2275.md  mr.2290.md  mr.2297.md  mr.2301.md  mr.2324.md  mr.2329.md  mr.2355.md  mr.2361.md  mr.2387.md  mr.2394.md  mr.2395.md  mr.2403.md  mr.2412.md  mr.2424.md  mr.2445.md
doc/changes/ipc/: mr.2265.md  mr.2427.md
doc/changes/misc_features/: mr.1655.md  mr.2267.md  mr.2342.md  mr.2382.md
doc/changes/misc_fixes/: mr.2243.md  mr.2257.md  mr.2261.md  mr.2276.md  mr.2294.md  mr.2307.md  mr.2308.md  mr.2320.md  mr.2336.md  mr.2340.md  mr.2347.md  mr.2396.md  mr.2401.md  mr.2410.md  mr.2418.md  mr.2422.md  mr.2423.md  mr.2447.md  rm.2335.md
doc/changes/state_trackers/: mr.1934.md  mr.2223.md  mr.2256.md  mr.2259.md  mr.2262.md  mr.2285.md  mr.2289.md  mr.2296.md  mr.2303.md  mr.2304.md  mr.2306.md  mr.2312.md  mr.2327.md  mr.2330.md  mr.2352.md  mr.2353.md  mr.2354.md  mr.2370.md  mr.2406.md  mr.2478.md  mr.2480.md
doc/changes/xrt/: mr.1786.md  mr.2223.md  mr.2244.md  mr.2271.md  mr.2284.md  mr.2286.md  mr.2299.md  mr.2310.md  mr.2313.md  mr.2341.md  mr.2352.md  mr.2439.md  mr.2463.md  mr.2477.md  mr.2481.md
hub/: VRuskaEngine_Hub.sln
hub/VRuskaEngine_Hub/: VRuskaEngine_Hub.vcxproj  VRuskaEngine_Hub.vcxproj.filters  main_win32.c
hub/VRuskaEngine_Hub/x64/Debug/: VRuskaEngine_Hub.exe.recipe  VRuskaEngine_Hub.ilk  vc143.idb
scripts/: copy.bara.sky  generate_oxr_ext_support.py  generate_vk_helpers.py
src/gui/: main_win32.c
src/xrt/auxiliary/android/: CMakeLists.txt  android_ahardwarebuffer_allocator.c  android_custom_surface.h
src/xrt/auxiliary/bindings/: bindings.py
src/xrt/auxiliary/os/: os_time.h
src/xrt/auxiliary/tracking/: t_camera_models.h  t_tracking.h
src/xrt/auxiliary/util/: CMakeLists.txt  u_builders.h  u_config_json.c  u_debug_gui.c  u_debug_gui.h  u_device.c  u_device.h  u_distortion_mesh.c  u_documentation.h  u_file.c  u_git_tag.h  u_logging.c  u_metrics.c  u_pretty_print.c  u_pretty_print.h  u_process.c  u_process.h  u_resampler.c  u_sink.h  u_sink_converter.c  u_system.c  u_worker.h
src/xrt/auxiliary/vive/: vive_config.c
src/xrt/auxiliary/vk/: vk_bundle_init.c  vk_helpers.c  vk_helpers.h
src/xrt/compositor/client/: comp_egl_client.c
src/xrt/compositor/main/: comp_compositor.c  comp_target_swapchain.c  comp_window_android.c  comp_window_direct.c  comp_window_mswin.c
src/xrt/compositor/null/: null_compositor.c  null_compositor.h
src/xrt/compositor/util/: comp_vulkan.c
src/xrt/drivers/: CMakeLists.txt
src/xrt/drivers/ht/: ht_driver.c
src/xrt/ipc/: CMakeLists.txt
src/xrt/targets/: CMakeLists.txt
src/xrt/targets/ctl/: CMakeLists.txt  main.c
src/xrt/targets/libmonado/: CMakeLists.txt  example.c  monado.c  monado.h
src/xrt/targets/steamvr_drv/: CMakeLists.txt
tests/android/: README.md
(+103 files in other folders)
